# smartholidayagent

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CASE_STUDY.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  config.yaml  evals.py  pyproject.toml  quality_report.py  requirements.txt  ruff.toml
.github/workflows/: ci.yml
data/: README.md  eval_prompts_responses.csv  telemetry_events.csv
deployment/: README.md
deployment/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/: NEXT_STEPS_ROADMAP.md  WEEK1_AI_CORE_DEMO.md  WEEK2_DAY1_DAY2_TELEMETRY.md
evals/: run_quality_eval.py  weekly_quality_report.py
infra/cloudformation/: app.yml  vpc.yml
scripts/: deploy_aws.sh
src/: README.md  holidays.py  llm_handler.py  optimizer.py  planning.py  telemetry.py
src/smartholidayagent/: main.py  models.py
src/smartholidayagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/smartholidayagent/services/: govuk_holidays.py
src/smartholidayagent/static/: styles.css
src/smartholidayagent/templates/: index.html  results.html
tests/: README.md  test_ai_behaviour.py  test_evals.py  test_govuk_holidays.py  test_holidays.py  test_llm_handler.py  test_manual.py  test_optimizer.py  test_planning.py  test_quality_report.py  test_telemetry.py
venv 4-33-03-830 pm/: pyvenv.cfg
